[package]
name = "ham_bands_nif"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ham_bands_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ham_bands = { path = "../../../ham_bands_rs" }
# rustler = "0.22.2"
rustler = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_rustler = "0.1.0"
